Add embla-carousel library and update dependencies

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel": "8.0.0-rc19",
     "embla-carousel-react": "8.0.0-rc19",
     "jose": "^5.2.0",
     "lucide-react": "^0.292.0",
